samples/task/invalid/R6.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <taskbody><steps><step><cmd/></step></steps></taskbody>
  <shortdesc>Short description</shortdesc>
  <prolog/>
</task>